2009-06-11 18:17 +0200  Rocco Rutte  <pdmef@gmx.net>  (8efc1cd0b8c0)

	* browser.c: Use only latest mtime of new/cur for browser, not whole
	stat() info

2009-06-11 18:14 +0200  Rocco Rutte  <pdmef@gmx.net>  (05f8c53b57a1)

	* ChangeLog, copy.c: Don't reformat Return-Path (angle brackets are
	not optional). Closes #1702.

2009-06-10 17:44 +0200  Rocco Rutte  <pdmef@gmx.net>  (0721c3f6320d)

	* mbox.c, mx.c: Only print messages about CONTEXT when quiet flag not
	set

2009-06-09 22:09 -0700  Brendan Cully  <brendan@kublai.com>  (dc9ec900c657)

	* ChangeLog, mutt_ssl.c: Improve host checking for SSL with
	intermediate certificates.

2009-06-09 22:03 -0700  Brendan Cully  <brendan@kublai.com>  (9dcb7288039d)

	* mutt_ssl.c: Whitespace.

	* imap/imap.c: Skip comparison against current mailbox for idle
	connections. Closes #3216.

	* imap/util.c: Revert accidental change

	* imap/util.c: Remove trailing whitespace.

2009-06-08 23:55 -0700  Brendan Cully  <brendan@kublai.com>  (15c662a95b91)

	* configure.ac, m4/libgnutls.m4: Test for libgnutls by hand rather
	than relying on deprecated libgnutls-config script. Closes #3239.

2009-06-07 10:55 -0700  Brendan Cully  <brendan@kublai.com>  (9831d4c2c3f9)

	* imap/message.c: Do not display error message when user declines
	to create target mailbox.

	* imap/message.c: Minor cleanup in imap_copy_messages.

2009-06-07 08:14 +0200  Miroslav Lichvar  <mlichvar@redhat.com>  (16592f0dfdaf)

	* configure.ac, mutt_ssl_gnutls.c: Disable checking certificate
	activation/expiration times in gnutls as we do the checks ourselves.

2009-06-06 22:31 -0700  Brendan Cully  <brendan@kublai.com>  (e5c2befbf0f5)

	* imap/message.c: Do not treat already-seen headers as if they are
	new. See #2935.

2009-06-07 02:09 +0200  Rocco Rutte  <pdmef@gmx.net>  (a786b0e8627c)

	* doc/dotlock.man, doc/makedoc.c, doc/mbox.man, doc/mmdf.man,
	doc/mutt.man, init.h: Fix hyphens in manpages. Closes #1937
